# VirtualOS

./: .gitignore  CMakeLists.txt  README.md  TEAM_INTERPRETER_SYSCALLS_TASKS.md  TEAM_MEMORY_SCHEDULER_TASKS.md  TEAM_MUTEX_SKELETON_CONSOLE_TASKS.md  compile.cmd  generate-gcc-build.cmd  logs  task.d  task.md
Src/: main.c
Src/Tests/INTERPRETER_SYSCALLS/: LOGGING_GUIDE.md  TESTS_EXECUTION_GUIDE.md  test_all_interpreter_syscalls.c  test_execution.c  test_parser.c  test_syscalls.c
Src/apps/User Apps/: Program_1.txt  Program_2.txt  Program_4.txt
Src/apps/systemApps/Console/: console.c  console.h
Src/apps/systemApps/Gui/: Gui.c  Gui.h
Src/apps/systemApps/Parser_Interpeter/: Parser.c  Parser.h  ParserIntegration.c  ParserIntegration.h  Tokenizer.c
Src/emu/Console/: Console.c  Console.h
Src/emu/Core/: Emulator.c  Emulator.h  Emulator_core.h  Logger.c  Logger.h
Src/emu/FIles/: FIles.c  Files.h
Src/emu/Mem/: Mem.c  Mem.h  Mem_core.h
Src/sys/: Excution.c  Start.c  flags.c  kernal.h
Src/sys/Gui/: Gui.c  Gui.h
Src/sys/Memory/: Memory.c  Memory.h
Src/sys/Parser/: Parser.c  Parser.h  ParserIntegration.c  ParserIntegration.h
Src/sys/Resouces/: Mutex.h  Mutext.c
Src/sys/Scheduler/: Scheduler.c  Scheduler.h
Src/sys/SysCalls/: SysCallDispatcher.c  SysCallDispatcher.h  SysCalls.h  SyscallHandlers.c
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
scripts/: compile.ps1  generate-gcc-build.ps1
